# Knapsack-Problem

./: CMakeLists.txt  Doxyfile
src/: branch_bound.cc  branch_bound.h  brute_force.cc  brute_force.h  dynamic.cc  dynamic.h  fptas.cc  fptas.h  heuristic.cc  heuristic.h  instances.cc  instances.h  read_instance.h  sat.cc  sat.h  tabu_search.cc  tabu_search.h  tabu_search_sat.cc  tabu_search_sat.h
